[package]
name = "cccr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log =  "0.4"
env_logger = "0.4.1"
failure = "0.1.5"
chrono = "0.4"

[package.metadata.winres]
OriginalFilename = "cccr.exe"
FileVersion = 1.01
ProductVersion = 1.01
FileDescription = "Console Command Client"
LegalCopyright = "Copyright © 2022"

